fix some apis
